[[tool.mypy.overrides]]
module = "mlx.*"
ignore_missing_imports = true

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "0.1.0"
description = "A maze generator and renderer using ASCII and MiniLibX."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["mazegen", "render"]